--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,18 +34,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.alibaba:fastjson:1.2.31'
     implementation 'cn.bmob.android:bmob-sdk:3.6.3'
-    implementation 'com.xw.repo:xedittext:2.0.8@aar'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation files('libs/AMap_Location_V4.2.0_20180809.jar')
-    implementation files('libs/AMap_Search_V6.5.0_20180930.jar')
-    implementation files('libs/Android_Map3D_SDK_V6.5.0_20180930.jar')
+    implementation files('libs/AMap3DMap_6.5.0_AMapNavi_6.4.0_AMapSearch_6.5.0_AMapLocation_4.3.0_20181016.jar')
 }
